jdk-16->jdk-17 conversion.  We will no longer support jdk-16.